fix(core): 🐛 incorrect spacing within page tools buttons

--- a/resources/skins.citizen.styles/components/Pagetools.less
+++ b/resources/skins.citizen.styles/components/Pagetools.less
@@ -62,6 +62,7 @@
 			padding-left: var( --space-sm );
 			border-radius: var( --border-radius--medium );
 			font-size: 0;
+			gap: 0;
 
 			&:hover {
 				background-color: var( --background-color-quiet--hover );
